Improve Website Design
Not perfect but it will do for now.

Design is improved and HTML bad practices too such as HTML 5 instead of
older and proper HTML tags used like nav, main, header, footer.

Would like to add responsiveness to screen size via media queries.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -11,38 +11,23 @@
         <title>South Devon Cars</title>
     </head>
     <body>
-        <div class="header" id="header">
-            <div class="header" id="banner">
-                <img src="/Images/SouthDevonCarsLogo.jpg" alt="South Devon Cars Logo">
-                <img src="/Images/SouthDevonCarsLogo.jpg" alt="South Devon Cars Logo">
-                <img src="/Images/SouthDevonCarsLogo.jpg" alt="South Devon Cars Logo">
-                <img src="/Images/SouthDevonCarsLogo.jpg" alt="South Devon Cars Logo">
-                <img src="/Images/SouthDevonCarsLogo.jpg" alt="South Devon Cars Logo">
-                <img src="/Images/SouthDevonCarsLogo.jpg" alt="South Devon Cars Logo">
-                <img src="/Images/SouthDevonCarsLogo.jpg" alt="South Devon Cars Logo">
-                <img src="/Images/SouthDevonCarsLogo.jpg" alt="South Devon Cars Logo">
-                <img src="/Images/SouthDevonCarsLogo.jpg" alt="South Devon Cars Logo">
-            </div>
-            <div class="header" id="navigation">
-                <ul class="navigation">
-                    <li class="navigation"><a href="#">Home</a></li>
-                    <li class="navigation"><a href="#">In Stock</a></li>
-                    <li class="navigation"><a href="#">Where to Find Us</a></li>
-                    <li class="navigation"><a href="#">Book a test drive</a></li>
+        <header class="container">
+            <a href="#"><img src="/Images/SouthDevonCarsLogo.jpg" alt="South Devon Cars Logo" width="50" height="50"></a>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">In Stock</a></li>
+                    <li><a href="#">Where to Find Us</a></li>
+                    <li><a href="#">Book a test drive</a></li>
                 </ul>
+            </nav>
+        </header>
 
-            </div>
-        </div>
-
-        <div class="main" id="main">
-            <div class="main container" id="top">
-                <div class="main container top" id="hero">
-                    <img src="/Images/heroImage.jpg" alt="An old standing infront of cars">
-                </div>
-                <div class="main container top" id="welcomeText">
-                    <h1>
-                        Welcome to South Devon Cars!
-                    </h1>
+        <main class="container">
+            <div id="top">
+                <img src="/Images/heroImage.jpg" alt="An old standing infront of cars" width="500" height="500">
+                <div>
+                    <h1>Welcome to South Devon Cars!</h1>
                     <h2>Your Trusted Source for Quality Used Cars</h2>
                     <p>At South Devon Cars, we pride ourselves on offering a wide selection of reliable, pre-owned vehicles. Whether you’re looking for a family-friendly SUV, a fuel-efficient sedan, or a sporty coupe, we’ve got you covered.</p>
 
@@ -54,59 +39,38 @@
                     </ul>
                 </div>
             </div>
-            <div class="main container" id="bottom">
-                <div class="main container bottom" id="imgLeft">
-                    <img src="/Images/Audi.jpeg" alt="Like new Audi in blue">
-                </div>
-                <div class="main container bottom" id="imgCenter">
-                    <img src="/Images/classic-car.jpg" alt="American beauty could be yours">
-                </div>
-                <div class="main container bottom" id="ingRight">
-                    <img src="/Images/Jaaaaaaaaag.jpg" alt="In need of a little restoration">
-                </div>
+            <div id="bottom">
+                <img id="imgLeft" src="/Images/Audi.jpeg" alt="Like new Audi in blue" width="500" height="500">
+                <img id="imgBottom" src="/Images/classic-car.jpg" alt="American beauty could be yours" width="500" height="500">
+                <img id="imgRight" src="/Images/Jaaaaaaaaag.jpg" alt="In need of a little restoration" width="500" height="500">
             </div>
-        </div>
+        </main>
 
-        <div class="footer">
-            <div class="footer content" id="social">
-                    <img src="/Images/facebook.png" alt="">
-                    <img src="/Images/instagram.png" alt="">
-                    <img src="/Images/tik-tok.png" alt="">
-                    <img src="/Images/X.png" alt="">
+        <footer class="container">
+            <ul id="social">
+                <li><img src="/Images/facebook.png" alt="" width="16" height="16"></li>
+                <li><img src="/Images/instagram.png" alt="" width="16" height="16"></li>
+                <li><img src="/Images/tik-tok.png" alt="" width="16" height="16"></li>
+                <li><img src="/Images/X.png" alt="" width="16" height="16"></li>
+            </ul>
+            <div id="siteMap">
+                <h5>Pages</h5>
+                <h5>Services</h5>
+                <h5>Misc</h5>
+                <a href="#">a</a>
+                <a href="#">a1</a>
+                <a href="#">a2</a>
+                <a href="#">b</a>
+                <a href="#">b1</a>
+                <a href="#">b2</a>
+                <a href="#">c</a>
+                <a href="#">c1</a>
+                <a href="#">c2</a>
+                <a href="#">d</a>
+                <a href="#">d1</a>
+                <a href="#">d2</a>         
             </div>
-            <div class="footer content" id="siteMap">
-                <table>
-                    <tr>
-                        <th><h5>Pages</h5></th>
-                        <th><h5>Services</h5></th>
-                        <th><h5>Misc</h5></th>
-                    </tr>
-
-                    <tr>
-                        <td> <a href="#">a</a></td>
-                        <td> <a href="#">a1</a></td>
-                        <td> <a href="#">a2</a></td>
-                    </tr>
-                    <tr>
-                        <td> <a href="#">b</a></td>
-                        <td> <a href="#">b1</a></td>
-                        <td> <a href="#">b2</a></td>
-                    </tr>
-                    <tr>
-                        <td> <a href="#">c</a></td>
-                        <td> <a href="#">c1</a></td>
-                        <td> <a href="#">c2</a></td>
-                    </tr>
-                    <tr>
-                        <td> <a href="#">d</a></td>
-                        <td> <a href="#">d1</a></td>
-                        <td> <a href="#">d2</a></td>
-                    </tr>
-                </table>           
-            </div>
-            <div class="footer content" id="copyright">
-                &COPY; Stephen Levenson 2023 - Built using out of date technology on purpose for educational purposes
-            </div>
-        </div>
+            <p id="copyright">&COPY; Stephen Levenson 2023 - Built using out of date technology on purpose for educational purposes</p>
+        </footer>
     </body>
 </html>
