Make hero section more responsive
For better user experience on mobile.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,12 +25,11 @@
 
         <main class="container">
             <div id="top">
-                <img src="/Images/heroImage.jpg" alt="An old standing infront of cars" width="500" height="500">
+                <img src="/Images/heroImage.jpg" alt="An old standing infront of cars">
                 <div>
                     <h1>Welcome to South Devon Cars!</h1>
                     <h2>Your Trusted Source for Quality Used Cars</h2>
                     <p>At South Devon Cars, we pride ourselves on offering a wide selection of reliable, pre-owned vehicles. Whether you’re looking for a family-friendly SUV, a fuel-efficient sedan, or a sporty coupe, we’ve got you covered.</p>
-
                     <h3>Why Choose South Devon Cars?</h3>
                     <ul>
                         <li>Quality Assurance: Every car on our lot undergoes a rigorous inspection to ensure it meets our high standards.</li>
