Add new pages and link to them
Also edited the author and copyright content to include me as an editor,
to make it more accurate.

Made a border-bottom class to easily add and edit a border bottom to all
elements as needed.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="keywords" content="Cars,South,Devon,Used,Cheap">
         <meta name="description" content="Friendly Afordable used cars in South Devon">
-        <meta name="author" content="Stephen Levenson">
-        <meta name="copyright" content="All rights reserved produced by Stephen Levenson as an educational tool">
+        <meta name="author" content="Stephen Levenson, Mark Skelton">
+        <meta name="copyright" content="All rights reserved produced by Stephen Levenson as an educational tool. Edited by Mark Skelton">
         <base href="index.html">
         <link href="/CSS/styles.css" rel="stylesheet" type="text/css">
         <title>South Devon Cars</title>
@@ -15,10 +15,10 @@
             <a href="#"><img src="/Images/SouthDevonCarsLogo.jpg" alt="South Devon Cars Logo" width="50" height="50"></a>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">In Stock</a></li>
-                    <li><a href="#">Where to Find Us</a></li>
-                    <li><a href="#">Book a test drive</a></li>
+                    <li><a href="/HTML/index.html">Home</a></li>
+                    <li><a href="/HTML/instock.html">In Stock</a></li>
+                    <li><a href="/HTML/findus.html">Where to Find Us</a></li>
+                    <li><a href="/HTML/book.html">Book a test drive</a></li>
                 </ul>
             </nav>
         </header>
@@ -38,7 +38,7 @@
                     </ul>
                 </div>
             </div>
-            <div id="bottom">
+            <div id="bottom" class="border-bottom">
                 <img id="imgLeft" src="/Images/Audi.jpeg" alt="Like new Audi in blue" width="500" height="500">
                 <img id="imgBottom" src="/Images/classic-car.jpg" alt="American beauty could be yours" width="500" height="500">
                 <img id="imgRight" src="/Images/Jaaaaaaaaag.jpg" alt="In need of a little restoration" width="500" height="500">
@@ -69,7 +69,7 @@
                 <a href="#">d1</a>
                 <a href="#">d2</a>         
             </div>
-            <p id="copyright">&COPY; Stephen Levenson 2023 - Built using out of date technology on purpose for educational purposes</p>
+            <p id="copyright">&COPY; Stephen Levenson 2023 - Built using out of date technology on purpose for educational purposes; updated by Mark Skelton</p>
         </footer>
     </body>
 </html>
